@startuml MER_SEGURIDAD
title MER — Base travel_bqto_seguridad

hide circle
hide methods
skinparam linetype ortho
skinparam shadowing false
skinparam backgroundColor #FFFFFF
skinparam defaultFontName Helvetica
skinparam defaultFontSize 12
skinparam arrowColor black
skinparam entity {
  BackgroundColor white
  BorderColor black
}

entity ROL {
  * id : PK
  --
  * nombre
}

entity PERMISO {
  * id : PK
  --
  * codigo
  * modulo
}

entity ROLES_PERMISOS {
  * rol_id : PK, FK
  * permiso_id : PK, FK
}

entity USUARIO {
  * id : PK
  --
  * rol_id : FK
  * correo
  hash_contrasena
  nombre
  apellido
}

entity BITACORA {
  * id : PK
  --
  usuario_id : FK
  * modulo
  * accion
  tabla_afectada
  registro_id
  * resumen
  ip_origen
  * creado_en
}

ROL ||--o{ USUARIO
ROL ||--o{ ROLES_PERMISOS
PERMISO ||--o{ ROLES_PERMISOS
USUARIO ||--o{ BITACORA

note bottom of BITACORA
  Los triggers trg_sigel_* escriben
  INSERT / UPDATE / DELETE.
  LOGIN y VALIDAR los registra la API.
end note

@enduml
